objects/wkitsm__Announcement__c.object
<CustomObject>
    <fields>
        <fullName>wkitsm__Active__c</fullName>
        <formula>AND( 
 AND( 
  NOT( wkitsm__Past__c ), 
  NOT( wkitsm__Scheduled__c ) 
 ), 
 OR( 
  NOT( ISBLANK( wkitsm__Start_Time__c ) ), 
  NOT( ISBLANK( wkitsm__End_Time__c ) ) 
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Announcement is not active if the start and end dates are blank, or if their date range is in the past or future</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkitsm__AdditionalDetails__c</fullName>
        <description>A field to add more details around the Announcement being displayed. Must go to the Announcement record page to view this field.</description>
        <inlineHelpText>Additional details displayed when viewing a full announcement record. Not visible in the announcement component.</inlineHelpText>
        <label>Additional Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>wkitsm__AnnouncementDetails__c</fullName>
        <description>A brief message that is displayed in the Announcements component.</description>
        <inlineHelpText>Announcement details displayed in the announcement component</inlineHelpText>
        <label>Announcement Details</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wkitsm__Past__c</fullName>
        <formula>wkitsm__End_Time__c&lt;NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Past</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkitsm__Scheduled__c</fullName>
        <formula>wkitsm__Start_Time__c&gt;NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkitsm__Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wkitsm__Visibility__c</fullName>
        <label>Visibility</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EWOnly</fullName>
                    <label>Employee Workspace</label>
                </value>
                <value>
                    <fullName>ITSCOnly</fullName>
                    <default>true</default>
                    <label>ITSC Console</label>
                </value>
                <value>
                    <fullName>EWAndITSC</fullName>
                    <label>Employee Workspace and ITSC Console</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Announcement</label>
    <listViews>
        <fullName>wkitsm__Active_Announcements</fullName>
        <columns>NAME</columns>
        <columns>wkitsm__AnnouncementDetails__c</columns>
        <columns>wkitsm__Start_Time__c</columns>
        <columns>wkitsm__End_Time__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>wkitsm__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Announcements</label>
    </listViews>
    <listViews>
        <fullName>wkitsm__All</fullName>
        <columns>NAME</columns>
        <columns>wkitsm__AnnouncementDetails__c</columns>
        <columns>wkitsm__Start_Time__c</columns>
        <columns>wkitsm__End_Time__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Announcements</label>
    </listViews>
    <listViews>
        <fullName>wkitsm__Inactive_Announcements</fullName>
        <columns>NAME</columns>
        <columns>wkitsm__AnnouncementDetails__c</columns>
        <columns>wkitsm__Start_Time__c</columns>
        <columns>wkitsm__End_Time__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>wkitsm__Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Announcements</label>
    </listViews>
    <listViews>
        <fullName>wkitsm__Past_Announcements</fullName>
        <columns>NAME</columns>
        <columns>wkitsm__AnnouncementDetails__c</columns>
        <columns>wkitsm__Start_Time__c</columns>
        <columns>wkitsm__End_Time__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>wkitsm__Past__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Past Announcements</label>
    </listViews>
    <listViews>
        <fullName>wkitsm__Scheduled_Announcements</fullName>
        <columns>NAME</columns>
        <columns>wkitsm__AnnouncementDetails__c</columns>
        <columns>wkitsm__Start_Time__c</columns>
        <columns>wkitsm__End_Time__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>wkitsm__Scheduled__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Scheduled Announcements</label>
    </listViews>
    <nameField>
        <label>Announcement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Announcements</pluralLabel>
    <recordTypes>
        <fullName>wkitsm__AlertAnnouncement</fullName>
        <active>true</active>
        <description>Announcement of type Alert</description>
        <label>Alert</label>
    </recordTypes>
    <recordTypes>
        <fullName>wkitsm__InformationalAnnouncement</fullName>
        <active>true</active>
        <description>Announcement of type Information</description>
        <label>Informational</label>
    </recordTypes>
    <recordTypes>
        <fullName>wkitsm__WarningAnnouncement</fullName>
        <active>true</active>
        <description>Announcement of type Warning</description>
        <label>Warning</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>